--- a/audio-converter/index.html
+++ b/audio-converter/index.html
@@ -6,7 +6,21 @@
 
   <title>AUDIO CONVERTER</title>
 
-  <link rel="stylesheet" href="/audio-converter/css/app-shell.css" />
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    canvas {
+      width: 100%;
+      height: 100%;
+      image-rendering: pixelated;
+      image-rendering: -moz-crisp-edges;
+    }
+  </style>
 </head>
 <body>
   <script type="module" src="/audio-converter/js/index.js"></script>
